J21 Updates through campaign